# txtr

./: .gitignore  LICENSE  README.md  devlog.txt  e  plugin-registry.json  pyproject.toml
.github/workflows/: docs.yml
docs/: astro.config.ts  package-lock.json  package.json
docs/public/: CNAME  robots.txt
docs/src/components/: Balatro.css  Balatro.tsx  HeroWithBackground.astro
docs/src/content/docs/: index.mdx  installation.md  introduction.md  quickstart.md  r.sh
docs/src/content/docs/config/: citations.md  compiler.md  overview.md  plugins.md  themes.md
docs/src/content/docs/plugins/: development.md  (+3 more)
texitor/: __main__.py
texitor/config/: colors.toml
texitor/core/: bibparser.py  buffer.py  citecompleter.py  clipboard.py  cmdregistry.py  compiler.py  config.py  config_default.toml  cursorstate.py  firstrun.py  keybinds.py  keybinds_default.toml  modes.py  newregistry.py  plugins.py  recents.py  theme.py  version.py
texitor/core/builtins/: wordcount.py
texitor/core/builtins/freeze/: __init__.py  helpers.py  manifest.toml
texitor/core/builtins/zathura/: __init__.py  helpers.py  manifest.toml
texitor/latex/: commands.toml  completer.py  snippets.py  snippets.toml
texitor/ui/: app.py  autocomplete.py  buffertabs.py  buildpanel.py  configpanel.py  editor.py  fileexplorer.py  helpmenu.py  infopanel.py  plugininfo.py  searchbar.py  splash.py  statusbar.py
texitor/ui/app/: __init__.py  actions.py  buffers.py  commands.py  commands_compiler.py  commands_file.py  commands_plugins.py  commands_view_config.py  keybind_commands.py  keydispatch.py
(+6 files in other folders)
