[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texitor"
version = "1.3.2"
description = "A Vim-style LaTeX TUI editor."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual>=0.80",
]

[project.urls]
"Homepage" = "https://github.com/benjibrown/txtr"
"Issues" = "https://github.com/benjibrown/txtr/issues"


[project.scripts]
txtr = "texitor.__main__:main"

[project.optional-dependencies]
dev = ["textual-dev"]

[tool.setuptools.packages.find]
where = ["."]
include = ["texitor*"]
